Fix database configuration and other files for deployment

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ALLOWED_HOSTS==hiyarihatto2.onrender.com,localhost,127.0.0.1
-DATABASE_URL==postgresql://h_smm2_user:rq8aU1G1IIc46gdyDx2FPAfUnaSZmVJH@dpg-cq7lb35ds78s73d8vu30-a/h_smm2
-SECRET_KEY==9k%6+%h3z1230cm-l)3!6r$%^0#xz^l%r!^d^jsv@&n=_z5m&_
+ALLOWED_HOSTS=hiyarihatto2.onrender.com,localhost,127.0.0.1
+DATABASE_URL=postgresql://hatto:7SOOZsLDkch9C5GCMaCsZAIX2j5vX2za@dpg-cq7li8uehbks7391c42g-a:5432/hiyari_tmly
+SECRET_KEY=99k%6+%h3z1230cm-l)3!6r$%^0
